--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ ehthumbs.db
 Thumbs.db
 Assets/LeanTween/
 Assets/LeanTween.meta
+Assets/Vectrosity/
+Assets/Vectrosity.meta
+Assets/Plugins/VectrosityDemos/
+Assets/Plugins/VectrosityDemos.meta
